refactor: 파일 기반 리포트 생성으로 로직 수정