@@ -3,17 +3,21 @@ package root.git_turl.domain.report.service;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
+import root.git_turl.domain.report.dto.RepresentativeFile;
 import root.git_turl.domain.report.dto.commit.CommitTypeCount;
 import root.git_turl.domain.report.dto.GitAnalysisResult;
 import root.git_turl.domain.report.dto.commit.GitCommit;
-import root.git_turl.domain.report.dto.commit.MajorCommit;
-import root.git_turl.global.util.parser.DiffStructureParser;
+import root.git_turl.domain.report.dto.stat.FileStat;
+import root.git_turl.domain.report.service.stat.FileContentReader;
+import root.git_turl.domain.report.service.stat.FileSelector;
+import root.git_turl.domain.report.service.stat.FileStatAggregator;
 import root.git_turl.global.util.GithubUserMapper;
 import root.git_turl.global.util.parser.ReadmeParser;
-import root.git_turl.infrastructure.github.GitLogService;
 
 import java.time.LocalDate;
-import java.util.*;
+import java.util.List;
+import java.util.Map;
+import java.util.Set;
 import java.util.stream.Collectors;
 
 @Service
@@ -21,117 +25,66 @@ import java.util.stream.Collectors;
 @Slf4j
 public class GitAnalysisService {
 
-    private final GitLogService gitLogService;
-    private final GithubUserMapper githubUserMapper;
+    private static final int MAX_PROJECT_FILES = 10;
+    private static final int MAX_USER_FILES = 8;
+    private static final int PROJECT_FILE_BUDGET = 40_000; // chars
+    private static final int USER_FILE_BUDGET = 30_000;    // chars
 
-    public GitAnalysisResult analyze(String repoFullName, String repoPath, List<GitCommit> commits, List<GitCommit> userCommits) {
+    private final GithubUserMapper githubUserMapper;
+    private final FileStatAggregator fileStatAggregator;
+    private final FileSelector fileSelector;
+    private final FileContentReader fileContentReader;
+
+    public GitAnalysisResult analyze(String repoFullName, String repoPath,
+                                     List<GitCommit> commits, List<GitCommit> userCommits) {
+
+        Set<String> userHashes = userCommits.stream()
+                .map(GitCommit::getHash)
+                .collect(Collectors.toSet());
+
+        // 1) 파일 단위 통계 집계 (churn, commit 횟수, 유저 기여량 등)
+        Map<String, FileStat> fileStats = fileStatAggregator.aggregate(repoPath, commits, userHashes);
+
+        // 2) 프로젝트 대표 파일 / 유저 대표 파일 분리 선정
+        // 2) 프로젝트 대표 파일 / 유저 대표 파일 분리 선정 (FileStat 리스트로 선정)
+        List<FileStat> projectFileStats = fileSelector.selectProjectFiles(fileStats, MAX_PROJECT_FILES);
+        List<FileStat> userFileStats = fileSelector.selectUserFiles(fileStats, MAX_USER_FILES);
+
+        // 3) 실제 파일 내용 읽기 + 토큰 예산 내 축약
+        List<RepresentativeFile> projectFiles =
+                fileContentReader.readWithBudget(repoPath, projectFileStats, PROJECT_FILE_BUDGET, false);
+        List<RepresentativeFile> userFiles =
+                fileContentReader.readWithBudget(repoPath, userFileStats, USER_FILE_BUDGET, true);
+
+        // 4) 커밋 타입 분류 (정량 지표 - 커밋 기반 유지)
+        long feat = 0, fix = 0, refactor = 0, etc = 0;
+        for (GitCommit commit : commits) {
+            String msg = commit.getMessage().toLowerCase();
+            if (msg.startsWith("feat")) feat++;
+            else if (msg.startsWith("fix")) fix++;
+            else if (msg.startsWith("refactor")) refactor++;
+            else etc++;
+        }
 
         int totalCommits = commits.size();
         int userTotalCommits = userCommits.size();
 
-        Map<GitCommit, Integer> scoreMap = new HashMap<>();
-        List<DiffStructureParser.DiffSummary> summaryList = new ArrayList<>();
-
-        // 타입 분류
-        long feat = 0, fix = 0, refactor = 0, etc = 0;
-
-        for (GitCommit commit : commits) {
-            int score = 0;
-            String msg = commit.getMessage().toLowerCase();
-
-            if (msg.startsWith("feat")) {
-                feat++;
-                score += 5;
-            }
-            else if (msg.startsWith("fix")) {
-                fix++;
-                score += 4;
-            }
-            else if (msg.startsWith("refactor")) {
-                refactor++;
-                score += 3;
-            }
-            else {
-                etc++;
-                score += 1;
-            }
-
-            // 최신 여부
-            if (commit.getDate().isAfter(LocalDate.now().minusDays(7))) score += 3;
-            else if (commit.getDate().isAfter(LocalDate.now().minusDays(30))) score += 1;
-
-            // 사용자 커밋
-            if (!userCommits.contains(commit)) score -= 100;
-
-            scoreMap.put(commit, score);
-        }
-
-        List<GitCommit> candidates = scoreMap.entrySet().stream()
-                .sorted((a, b) -> b.getValue() - a.getValue())
-                .limit(30)
-                .map(Map.Entry::getKey)
-                .toList();
-
-        Map<GitCommit, Integer> finalScoreMap = new HashMap<>();
-        Map<String, String> diffCache = new HashMap<>();
-
-        // diff 기반 점수 추가
-        for (GitCommit commit : candidates) {
-            int score = scoreMap.get(commit);
-
-            String diff = diffCache.computeIfAbsent(
-                    commit.getHash(),
-                    h -> gitLogService.getCommitDiff(repoPath, h)
-            );
-
-            DiffStructureParser parser = new DiffStructureParser();
-            DiffStructureParser.DiffSummary summary = parser.parse(diff);;
-            summaryList.add(summary);
-
-            int diffScore = calculateDiffScore(diff);
-
-            finalScoreMap.put(commit, score + diffScore);
-        }
-
-        // 전체 커밋 메세지
-        List<String> allCommitMessages = commits.stream()
-                .map(GitCommit::getMessage)
-                .distinct()
-                .limit(80)
-                .toList();
-
-        // readme
+        // 5) README
         String readme = ReadmeParser.readReadme(repoPath);
 
-        // 상위 커밋
-        List<MajorCommit> majorCommits = finalScoreMap.entrySet().stream()
-                .sorted((a, b) -> b.getValue() - a.getValue())
-                .limit(5)
-                .map(entry -> {
-                    GitCommit commit = entry.getKey();
-                    String diff = diffCache.get(commit.getHash());
-
-                    return MajorCommit.builder()
-                            .hash(commit.getHash())
-                            .message(commit.getMessage())
-                            .diff(diff)
-                            .build();
-                })
-                .toList();
-
-        // 사용자별 커밋
+        // 6) 유저별 기여 분포
         Map<String, Long> contributionAnalyze = commits.stream()
                 .collect(Collectors.groupingBy(
                         c -> githubUserMapper.resolveLogin(c.getAuthorEmail(), repoFullName),
                         Collectors.counting()
                 ));
 
-        // 샘플 메시지
+        // 7) 커밋 메시지 샘플 (기여 분석 보조 자료로 유지 - 파일 원문만으로 부족한 맥락 보완)
         List<String> sampleMessages = userCommits.stream()
                 .filter(c -> !c.getMessage().startsWith("Merge"))
                 .map(GitCommit::getMessage)
                 .limit(30)
-                .collect(Collectors.toList());
+                .toList();
 
         return GitAnalysisResult.builder()
                 .totalCommits(totalCommits)
@@ -144,43 +97,10 @@ public class GitAnalysisService {
                         .etcCount(etc)
                         .build())
                 .sampleMessages(sampleMessages)
-                .majorCommits(majorCommits)
                 .contributionAnalyze(contributionAnalyze)
-                .summaryList(summaryList)
                 .readmeSummary(readme)
-                .allCommitMessages(allCommitMessages)
+                .projectRepresentativeFiles(projectFiles)
+                .userRepresentativeFiles(userFiles)
                 .build();
-    }
-
-    // diff 점수 계산
-    private int calculateDiffScore(String diff) {
-        if (diff == null || diff.isBlank()) return 0;
-
-        int added = 0;
-        int deleted = 0;
-        int files = 0;
-
-        for (String line : diff.split("\n")) {
-            if (line.startsWith("diff --git")) files++;
-            else if (line.startsWith("+") && !line.startsWith("+++")) added++;
-            else if (line.startsWith("-") && !line.startsWith("---")) deleted++;
-        }
-
-        int score = 0;
-
-        // 변경 규모
-        int total = added + deleted;
-        if (total > 500) score += 5;
-        else if (total > 200) score += 3;
-        else if (total > 50) score += 1;
-
-        // 파일 수
-        if (files > 10) score += 3;
-        else if (files > 5) score += 2;
-
-        // 추가, 삭제 균형
-        if (added > 0 && deleted > 0) score += 2;
-
-        return score;
     }
 }
